--- a/src/style.css
+++ b/src/style.css
@@ -147,3 +147,25 @@
     object-fit: contain;
     height: 180px;
 }
+
+.contact {
+    width: 700px;
+    min-height:78vh;
+    background-color:#0f172aaa;
+    margin: 20px auto;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 1.2rem;
+    font-weight: 400;
+}
+
+.contact-bold {
+    font-size: 1.4rem;
+    font-weight: bold;
+    margin-top: 20px;
+}
